--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>monrestoprivacypolicy</title>
+  <title>Mon Resto Play Store Privacy Policy</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -37,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '447830761';
+    var serviceWorkerVersion = '1888152456';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
